# backend

./: .dockerignore  .env.railway.example  .gitignore  DOCKER_SETUP_SUMMARY.md  GETTING_STARTED.md  Makefile  RAILWAY_DEPLOYMENT.md  README.md  docker-compose.yml  get_logs.py  healthcheck.ps1  healthcheck.sh  quick-start.ps1  railway.json  test.js  test_api.py  test_api2.py  test_nx.py
23548/: DEMO_INSTRUCTIONS.md  GRAPH_ENGINE_TEST_DOCS.md  INGESTION_WORKER_TEST_DOCS.md  NOTE_ABOUT_FILES.md  QUALIFIED_NAMES_TEST_DOCS.md  README.md  REPO_ID_TEST_DOCS.md  RETRY_LOGIC_TEST_DOCS.md  SHUTDOWN_TEST_DOCS.md  TEST_RESULTS.md  UNIT_TESTING_DOCUMENTATION.md  VALIDATION_TEST_DOCS.md  api_gateway_circuit_test.go  api_gateway_cycles_test.go  api_gateway_function_flow_test.go  api_gateway_graph_files_test.go  api_gateway_known_issues_test.go  api_gateway_retry_test.go  api_gateway_shutdown_test.go  api_gateway_validation_test.go  graph_engine_health_test.py  graph_engine_known_issues_test.py  graph_engine_retry_test.py  graph_engine_shutdown_test.py  graph_engine_test.py  ingestion_worker_batch_tests.rs  ingestion_worker_retry_tests.rs  (+8 more)
services/ingestion-worker/: .env.example  Cargo.toml  Dockerfile  README.md  entrypoint.sh  refactor.py  refactor2.py  test_clone.rs
services/ingestion-worker/src/: boundary_detector.rs  communication_detector.rs  dependency_metadata.rs  git_analyzer.rs  graph_builder.rs  main.rs  neo4j_storage.rs  shutdown_tests.rs  tests.rs
services/ingestion-worker/src/parsers/: go_parser.rs  javascript.rs  mod.rs  python_parser.rs  rust_parser.rs  typescript.rs
(+43 files in other folders)
